crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__no_fields.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {}
    ]
  }
]
