crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_array_column.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1,
          2,
          3,
          4,
          5
        ]
      }
    ]
  }
]
