crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_array_column_reverse.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "reversed": [
          "c",
          "b",
          "a"
        ]
      }
    ]
  }
]
