crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_array_variable.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": 2
      }
    ]
  },
  {
    "rows": [
      {
        "result": 3
      }
    ]
  }
]
