crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_array_variable_nested_types.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": []
  },
  {
    "rows": [
      {
        "result": "The organization Federation of United Solipsists has 1 committees, the largest of which has 1 members."
      }
    ]
  },
  {
    "rows": [
      {
        "result": "The organization RC Model Airplane Enthusiasts has 2 committees, the largest of which has 3 members."
      },
      {
        "result": "The organization Argonauts' Alumni Association has 1 committees, the largest of which has 4 members."
      }
    ]
  }
]
