crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_by_pk.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      }
    ]
  }
]
