crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__basic__select_composite_column.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "composite_field_1": {
            "scalar_field_1": 1,
            "scalar_field_2": 2
          },
          "composite_field_2": {
            "scalar_field_1": 2,
            "scalar_field_2": 3,
            "scalar_field_3": 4
          }
        }
      }
    ]
  }
]
